cluster/apps/forwards/monica/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: monica
  namespace: forwards
subsets:
- addresses:
  - ip: 192.168.0.103
  ports:
  - name: webui
    port: 30002
    protocol: TCP
