cluster/apps/forwards/monica/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: monica
  namespace: forwards
spec:
  ports:
  - name: monica
    port: 80
    protocol: TCP
    targetPort: 30002
  type: ClusterIP
