cluster/apps/forwards/monica/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/icon: account-group
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
  name: monica
  namespace: forwards
spec:
  rules:
  - host: "monica.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: monica
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "monica.${SECRET_DOMAIN}"
    secretName: "monica-tls"
